# multagentic_rag

./: README.md  pyproject.toml
multirag/: agents.py  cfg.py  engine.py  multiagentic_system.py  utils.py
multirag/prompts/: manager_system_prompt.txt  passage_retriever_system_prompt.txt  wikipedia_retriever_system_prompt.txt
