[build-system]
requires = ["setuptools", "setuptools-scm"]
requires-python = ">=3.12"
build-backend = "setuptools.build_meta"


[project]
name = "multiagentic-rag"
version = "0.0.1"

dependencies = ["fastapi",
                "torch",
                "transformers[agents]",
                "accelerate",
                "sentencepiece",
                "bitsandbytes",
                "pygments",
                "pandas",
                "langchain-community",
                "langchain-huggingface",
                "wikipedia",
                "faiss-cpu",
                "pillow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["multirag"]